Fix horizontal scrollbar issue

--- a/Styles/Custom.css
+++ b/Styles/Custom.css
@@ -28,7 +28,7 @@ header::after {
    position: absolute;
    top: 20%; 
    left: 0; 
-   width: 100vw;
+   /*width: 100vw;*/
    /*width: 100%; */
 }
 .nameFontStyle
